# DashWise

./: .dockerignore  .gitattributes  .gitignore  Dockerfile.pipeline  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dashwise/: __init__.py  __main__.py  api.py  cli.py  datagen.py  pipeline.py  reporting.py
dashwise/agents/: __init__.py  cost_agent.py  decision_agent.py  ingestion_agent.py  llm_client.py  sql_agent.py
data/: dashboards.json
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/docker-entrypoint.d/: 40-analysis.sh
frontend/public/: analysis_results.json
frontend/src/: App.jsx  index.css  theme.js
frontend/src/components/: Badge.jsx  ChartDetail.jsx  ChartTable.jsx  CostByDashboard.jsx  FilterBar.jsx  SummaryCards.jsx  VerdictDonut.jsx
frontend/src/lib/: format.js
output/: executive_report.md
tests/: test_api.py  test_cost_agent.py  test_decision_agent.py  test_ingestion_agent.py  test_pbix_fixture.py  test_sql_agent.py
tests/fixtures/: README.md
