[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dashwise"
version = "0.1.0"
description = "DashWise AI — BI Dashboard FinOps & Usage Audit (SQL quality + ₹ cost + usage → per-chart recommendations)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "DashWise AI" }]
keywords = ["finops", "bi", "dashboard", "sql", "cost", "audit", "sqlglot"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sqlglot>=20",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
dashwise = "dashwise.cli:cli"

[tool.setuptools.packages.find]
include = ["dashwise*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
