[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dashwise"
version = "0.1.0"
description = "DashWise AI — BI Dashboard FinOps & Usage Audit (SQL quality + ₹ cost + usage → per-chart recommendations)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "DashWise AI" }]
keywords = ["finops", "bi", "dashboard", "sql", "cost", "audit", "sqlglot"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sqlglot>=20",
    "click>=8.1",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "rapidfuzz>=3.9",
    "pbixray>=0.15",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "httpx2>=0.1",
]

[project.scripts]
dashwise = "dashwise.cli:cli"

[tool.setuptools.packages.find]
include = ["dashwise*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "pbix_e2e: end-to-end ingestion of the bundled real PBIX fixture; deselect with -m 'not pbix_e2e' for fast runs",
]
